--- a/spring-14-Data-Quaries/pom.xml
+++ b/spring-14-Data-Quaries/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.cydeo</groupId>
-    <artifactId>Spring-14-Data-Quaries</artifactId>
+    <artifactId>spring-14-Data-Quaries</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Spring-14-Data-Quaries</name>
     <description>Spring-14-Data-Quaries</description>
